--- a/templates/alogin.html
+++ b/templates/alogin.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <form action="http://localhost:5000/alogin" method="post">
+    <form action="" method="post">
 
         <button type="submit" class="btn btn-primary" name="return" value="success">success</button>
 
