--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,13 @@
 
 <body>
     </div>
-    <form action="http://localhost:5000/lslct" method="post">
+    <!--http://localhost:5000/lslct -->
+    <form action="/alogin" method="post">
 
         <button type="submit" class="btn btn-primary" name="user" value="admin">Admin Login</button>
-
-        <button type="submit" class="btn btn-primary" name="user" value="participant">Applicant Login</button>
-
+    </form>
+    <form action="/survey" method="post">
+    <button type="submit" class="btn btn-primary" name="user" value="participant">Applicant Login</button>
     </form>
 </body>
 
